--- a/package.json
+++ b/package.json
@@ -4,17 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "leaflet": "^1.9.4"
-  },
-  "devDependencies": {
-    "vite": "^6.2.0",
-    "@vitejs/plugin-react": "^4.1.0"
+    "check": "node --check index.js && node --check App.js && node --check components/ControlPanel.js && node --check constants.js && node --check types.js && node --check utils/geometry.js"
   }
 }
